<resources>
    <string name="app_name">Edunachal Admin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="appsc_current_quiz">APPSC Current Affairs Quiz</string>
    <string name="question">Question</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="explanation">Explanation</string>
    <string name="date">Date</string>
    <string name="correct_option">Correct Option</string>
    <string name="add_new">Add new</string>
    <string name="sign_out">Sign Out</string>
    <string name="appsc_current_quiz_response">Appsc Current Affairs Quiz Response</string>
    <string name="display_name">Display Name</string>
    <string name="obtained">Obtained</string>
    <string name="total">Total</string>
    <string name="all_users">All Users</string>
    <string name="details">Details</string>
    <string name="upsc_quiz">UPSC Quiz</string>
    <string name="appsc_quiz">APPSC Quiz</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="appsc_quiz_response">APPSC Quiz Response</string>
    <string name="upsc_quiz_response">UPSC Quiz Response</string>
    <string name="title">title</string>
    <string name="full_content">Full Content</string>
    <string name="tag">Tag (e.g. National)</string>
    <string name="choose_date">Choose Date</string>
    <string name="update">Update</string>
    <string name="appsb_maths">APPSB Maths</string>
    <string name="upload_new">Upload new</string>
    <string name="select_file">Select File</string>
    <string name="appsb_reasoning">APPSB Reasoning</string>
    <string name="appsb_english">APPSB English</string>
    <string name="appsb_g_k">APPSB G.K.</string>
    <string name="ssc_bank_maths">SSC/Bank Maths</string>
    <string name="ssc_bank_reasoning">SSC/Bank Reasoning</string>
    <string name="ssc_bank_english">SSC/Bank English</string>
    <string name="ssc_bank_g_k">SSC/Bank G.K.</string>
    <string name="appsc_essay_writing">APPSC Essay Writing</string>
    <string name="appsc_study_note">APPSC Study Note</string>
    <string name="appsc_answer_writing_practice">APPSC Answer writing practice</string>
    <string name="upsc_study_notes">UPSC Study Notes</string>
    <string name="upsc_essay_writing">UPSC Essay Writing</string>
    <string name="upsc_answer_writing_practice">UPSC Answer Writing Practice</string>
</resources>