<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:inputType="textPersonName"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tag"
        android:layout_below="@id/editTextTextPersonName5"/>

    <EditText
        android:id="@+id/editTextTextMultiLine3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:layout_below="@id/editTextTextPersonName6"
        android:hint="@string/full_content"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:layout_below="@id/editTextTextMultiLine3"/>

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@id/button14"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        android:layout_below="@id/button14"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        tools:ignore="VectorDrawableCompat" />

    <ProgressBar
        android:id="@+id/progressBar7"
        android:layout_centerInParent="true"
        android:elevation="2dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>