<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/question"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextTextMultiLine"
                    android:ems="10"
                    android:hint="@string/option1"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextTextPersonName"
                    android:ems="10"
                    android:hint="@string/option2"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextTextPersonName2"
                    android:ems="10"
                    android:hint="@string/option3"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:layout_below="@id/editTextTextPersonName4"
                    android:hint="@string/correct_option" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextTextPersonName3"
                    android:ems="10"
                    android:hint="@string/option4"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextTextMultiLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextNumberDecimal"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/explanation"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextTextMultiLine2"
                    android:ems="10"
                    android:hint="@string/date"
                    android:inputType="date" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:layout_below="@id/editTextDate"/>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/editTextDate"
                    app:srcCompat="@drawable/ic_baseline_delete_24"
                    tools:ignore="VectorDrawableCompat"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:elevation="2dp"/>
</RelativeLayout>