<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPdf">

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:hint="@string/title"/>

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="SelectFile"
        android:text="@string/select_file"
        android:layout_below="@id/editTextTextPersonName7" />

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_new"
        android:onClick="UploadIt"
        android:layout_below="@id/button18" />

    <ProgressBar
        android:id="@+id/progressBar10"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:indeterminate="true"
        android:layout_marginHorizontal="50dp"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>