<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_margin="3dp"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:textSize="25sp"
                android:textColor="@color/purple_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/obtained"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_below="@id/textView"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:text="@string/total"
                android:layout_margin="5dp"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:adjustViewBounds="true"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>